# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  apply_formatter.py  argparsing.py  diff.py  diff_dict.py  gendiff.py  parsing.py  plainify.py  reading.py  stringify.py  stylish.py
gendiff/formatters/: __init__.py  apply_formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gen_diff.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: flat1.yaml  flat3.json  json_nested_result.json  json_nested_result.txt  nested1.json  nested1.yml  nested3.json  plain_flat_result.txt  stylish_flat_result2  stylish_flat_result2.txt  stylish_nested_result1  stylish_nested_result2  stylish_nested_result2.txt
